--- a/SwampAttack/Resources/image/zombie2.plist
+++ b/SwampAttack/Resources/image/zombie2.plist
@@ -4,192 +4,23 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>zombie_attack0001.png</key>
+            <key>zombie_hurt_on0001.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{240,260},{88,134}}</string>
+                <string>{{260,418},{76,124}}</string>
                 <key>offset</key>
-                <string>{-2,-12}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{39,30},{88,134}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{330,224},{78,132}}</string>
-                <key>offset</key>
-                <string>{6,-13}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{52,32},{78,132}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,416},{94,132}}</string>
-                <key>offset</key>
-                <string>{21,-13}</string>
+                <string>{10,-16}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{59,32},{94,132}}</string>
+                <string>{{57,39},{76,124}}</string>
                 <key>sourceSize</key>
                 <string>{170,170}</string>
             </dict>
-            <key>zombie_attack0004.png</key>
+            <key>zombie_hurt_on0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,278},{118,136}}</string>
-                <key>offset</key>
-                <string>{23,-11}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{49,28},{118,136}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0005.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,140},{130,136}}</string>
-                <key>offset</key>
-                <string>{17,-11}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{37,28},{130,136}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0006.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{310,2},{142,136}}</string>
-                <key>offset</key>
-                <string>{11,-11}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{25,28},{142,136}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0007.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{156,2},{152,136}}</string>
-                <key>offset</key>
-                <string>{6,-11}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{15,28},{152,136}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0008.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{152,136}}</string>
-                <key>offset</key>
-                <string>{6,-11}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{15,28},{152,136}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0009.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{134,140},{118,114}}</string>
-                <key>offset</key>
-                <string>{-11,-22}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{15,50},{118,114}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0010.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{122,278},{120,116}}</string>
-                <key>offset</key>
-                <string>{-10,-21}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{15,48},{120,116}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_attack0011.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{136,400},{104,126}}</string>
-                <key>offset</key>
-                <string>{-7,-16}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{26,38},{104,126}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_hurt_light0001.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{264,396},{84,132}}</string>
-                <key>offset</key>
-                <string>{0,-13}</string>
-                <key>rotated</key>
-                <true/>
-                <key>sourceColorRect</key>
-                <string>{{43,32},{84,132}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_hurt_light0002.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{398,358},{76,130}}</string>
-                <key>offset</key>
-                <string>{8,-14}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{55,34},{76,130}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_hurt_light0003.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{410,220},{74,128}}</string>
-                <key>offset</key>
-                <string>{4,-15}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{52,36},{74,128}}</string>
-                <key>sourceSize</key>
-                <string>{170,170}</string>
-            </dict>
-            <key>zombie_hurt_light0004.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{382,140},{78,124}}</string>
+                <string>{{134,422},{78,124}}</string>
                 <key>offset</key>
                 <string>{2,-16}</string>
                 <key>rotated</key>
@@ -199,16 +30,224 @@
                 <key>sourceSize</key>
                 <string>{170,170}</string>
             </dict>
-            <key>zombie_hurt_light0005.png</key>
+            <key>zombie_hurt_on0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{250,140},{82,130}}</string>
+                <string>{{2,422},{80,130}}</string>
                 <key>offset</key>
-                <string>{-3,-14}</string>
+                <string>{-1,-13}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{41,34},{82,130}}</string>
+                <string>{{44,33},{80,130}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_hurt_on0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{156,286},{74,132}}</string>
+                <key>offset</key>
+                <string>{2,-12}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{50,31},{74,132}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_hurt_on0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{324,286},{72,128}}</string>
+                <key>offset</key>
+                <string>{4,-14}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{53,35},{72,128}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{168,2},{90,136}}</string>
+                <key>offset</key>
+                <string>{-6,-11}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{34,28},{90,136}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{260,2},{92,136}}</string>
+                <key>offset</key>
+                <string>{4,-13}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{43,30},{92,136}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{92,138}}</string>
+                <key>offset</key>
+                <string>{14,-14}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{53,30},{92,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,142},{78,138}}</string>
+                <key>offset</key>
+                <string>{9,-13}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{55,29},{78,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{80,282},{74,138}}</string>
+                <key>offset</key>
+                <string>{8,-12}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{56,28},{74,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{82,142},{72,138}}</string>
+                <key>offset</key>
+                <string>{8,-12}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{57,28},{72,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0007.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{96,2},{70,138}}</string>
+                <key>offset</key>
+                <string>{10,-11}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{60,27},{70,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0008.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,282},{76,138}}</string>
+                <key>offset</key>
+                <string>{17,-10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{64,26},{76,138}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0009.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{260,96},{96,134}}</string>
+                <key>offset</key>
+                <string>{9,-12}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{46,30},{96,134}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0010.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{396,134},{114,128}}</string>
+                <key>offset</key>
+                <string>{-1,-15}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{27,36},{114,128}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0011.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{398,2},{98,130}}</string>
+                <key>offset</key>
+                <string>{-8,-14}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{28,34},{98,130}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0012.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{232,286},{90,130}}</string>
+                <key>offset</key>
+                <string>{-12,-14}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{28,34},{90,130}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0013.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{260,194},{90,132}}</string>
+                <key>offset</key>
+                <string>{-11,-13}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{29,32},{90,132}}</string>
+                <key>sourceSize</key>
+                <string>{170,170}</string>
+            </dict>
+            <key>zombie_walk0014.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{168,140},{90,134}}</string>
+                <key>offset</key>
+                <string>{-9,-12}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{31,30},{90,134}}</string>
                 <key>sourceSize</key>
                 <string>{170,170}</string>
             </dict>
@@ -222,7 +261,7 @@
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:9fa3687f11641d89be86a1beb09a6834:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:33d295bd68940d6fc712c19e3622f0b0:1/1$</string>
             <key>textureFileName</key>
             <string>zombie2.png</string>
         </dict>
