--- a/SwampAttack/Resources/image/texiao2.plist
+++ b/SwampAttack/Resources/image/texiao2.plist
@@ -4,6 +4,84 @@
     <dict>
         <key>frames</key>
         <dict>
+            <key>button_flash0001.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{206,246},{58,42}}</string>
+                <key>offset</key>
+                <string>{0,6}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{26,28},{58,42}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
+            <key>button_flash0002.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{196,340},{68,54}}</string>
+                <key>offset</key>
+                <string>{0,5}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{21,23},{68,54}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
+            <key>button_flash0003.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,422},{78,66}}</string>
+                <key>offset</key>
+                <string>{-1,3}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{15,19},{78,66}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
+            <key>button_flash0004.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{108,340},{86,80}}</string>
+                <key>offset</key>
+                <string>{0,3}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{12,12},{86,80}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
+            <key>button_flash0005.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{108,246},{96,92}}</string>
+                <key>offset</key>
+                <string>{0,2}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{7,7},{96,92}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
+            <key>button_flash0006.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,246},{104,104}}</string>
+                <key>offset</key>
+                <string>{1,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{4,3},{104,104}}</string>
+                <key>sourceSize</key>
+                <string>{110,110}</string>
+            </dict>
             <key>item_flash0001.png</key>
             <dict>
                 <key>frame</key>
@@ -20,7 +98,7 @@
             <key>item_flash0002.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{124,2},{120,120}}</string>
+                <string>{{2,124},{120,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +111,7 @@
             <key>item_flash0003.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,124},{120,120}}</string>
+                <string>{{124,2},{120,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -64,9 +142,9 @@
             <key>realTextureFileName</key>
             <string>texiao2.png</string>
             <key>size</key>
-            <string>{256,256}</string>
+            <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:71acc0aa205816b1b223090ac1c38cfd:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:126c2c604b782892b677ff22fc399e34:1/1$</string>
             <key>textureFileName</key>
             <string>texiao2.png</string>
         </dict>
